--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -16,7 +16,12 @@
   margin-right: 40px;
 }
 
-.nav__items:hover {
+.nav__link {
+  text-decoration: none;
+  color: #36536B;
+}
+
+.nav__link:hover {
   color: #030303;
   cursor: pointer;
 }
